fix: when menu is expanded the bottom can go off screen and be inaccessible

--- a/src/css/_slider.scss
+++ b/src/css/_slider.scss
@@ -5,6 +5,6 @@
 .slider-inner {
   position: sticky;
   overflow: scroll;
-  max-height: 100vh;
+  max-height: 95vh;
   top: var(--space-m-l);
 }
